# rust-lab

./: .gitignore  Cargo.toml
contest/: .gitignore  Cargo.toml
contest/src/: main.rs
example/server/: 404.html  hello.html
example/server/src/: lib.rs  main.rs
game/walk-the-dog/: Cargo.toml  package-lock.json
game/walk-the-dog/src/: browser.rs  engine.rs  game.rs  lib.rs
game/walk-the-dog/static/: index.html
game/walk-the-dog/tests/: app.rs
